fix: prevent body overflow-x

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,7 @@ body {
   background: var(--background);
   font-size: 16px;
   text-rendering: optimizeLegibility;
+  overflow-x: hidden;
 }
 
 @layer utilities {
